# virtual_portfolio

./: README.md
backend/: config.py  db.py  jobs.py  main.py  pyproject.toml  scheduler.py
backend/models/: alert.py  journal.py  portfolio.py  stock_cache.py  trade.py
backend/routes/: alert.py  journal.py  portfolio.py  stock.py  trade.py
backend/services/: alert_service.py  journal_service.py  portfolio_service.py  stock_service.py  telegram_service.py  trade_service.py
backend/tests/: conftest.py  test_portfolios.py  test_trades.py
docs/: stock_tracker_project.md
frontend/src/: App.tsx
frontend/src/components/: AlertForm.tsx  HoldingsTable.tsx  StockSearch.tsx  TradeForm.tsx
frontend/src/pages/: Alerts.tsx  Dashboard.tsx  Journal.tsx  Portfolio.tsx
frontend/src/services/: api.ts
frontend/src/types/: alert.ts  journal.ts  portfolio.ts  trade.ts
